welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = 
{
	var h=nums.length-1
	for (n<-0 to h)
	{
		if (nums(n)==value)
		{
			return n
		}
		return -1
	}
}
